Fixed padding issues on mobile

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -26,7 +26,7 @@
 
 @media (max-width: 790px) {
   .app {
-    padding: 3rem;
+    padding: 3rem 1rem;
   }
   .contact-container {
     flex-direction: column;
